central-bundle/scanner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
    app: scanner
  annotations:
    owner: stackrox
    email: support@stackrox.com
spec:
  replicas: 1
  minReadySeconds: 15
  selector:
    matchLabels:
      app: scanner
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: stackrox
      labels:
        app.kubernetes.io/name: stackrox
        app: scanner
    spec:
      
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 25
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/compute
                    operator: In
                    values:
                    - "true"
            - weight: 75
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/infra
                    operator: NotIn
                    values:
                    - "true"
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: NotIn
                    values:
                    - "true"
      containers:
      - name: scanner
        image: 10.3.62.83:5000/stackrox/scanner:2.0.2
        resources:
          requests:
            memory: "2500Mi"
            cpu: "1000m"
          limits:
            memory: "4000Mi"
            cpu: "3000m"
        command:
        - /scanner
        ports:
        - name: https
          containerPort: 8080
        - name: grpc
          containerPort: 8443
        securityContext:
          capabilities:
            drop: ["NET_RAW"]
          runAsUser: 4000
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /scanner/ping
            port: 8080
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        volumeMounts:
        - name: scanner-config-volume
          mountPath: /etc/scanner
          readOnly: true
        - name: scanner-tls-volume
          mountPath: /run/secrets/stackrox.io/certs/
          readOnly: true
        - name: vuln-temp-db
          mountPath: /var/lib/stackrox
        - name: proxy-config-volume
          mountPath: /run/secrets/stackrox.io/proxy-config/
          readOnly: true
      - name: db
        image: 10.3.62.83:5000/stackrox/scanner-db:2.0.2
        resources:
          limits:
            cpu: 2
            memory: 4Gi
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
          - name: db-data
            mountPath: /var/lib/postgresql/data
      serviceAccount: scanner
      volumes:
      - name: scanner-config-volume
        configMap:
          name: scanner-config
      - name: scanner-tls-volume
        secret:
          secretName: scanner-tls
      - name: db-data
        emptyDir: {}
      - name: vuln-temp-db
        emptyDir: {}
      - name: proxy-config-volume
        secret:
          secretName: proxy-config
          optional: true
