central-bundle/scanner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  ports:
  - name: https-scanner
    port: 8080
    targetPort: 8080
  - name: grpc-scanner
    port: 8443
    targetPort: 8443
  selector:
    app: scanner
  type: ClusterIP
