central-bundle/scanner/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scanner
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
spec:
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: central
    ports:
    - port: 8080
      protocol: TCP
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app: scanner
  policyTypes:
    - Ingress
